# SoftFlowV5

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  pyproject.toml
cmake/: CompilerFlags.cmake
docs/: drug_delivery.md  tumor_growth.md
docs/analysis/: README.md
docs/api/: python_api.md
docs/theory/: adhesion.md  adr.md  contact.md  ibm.md  insertion.md  lbm.md  lubrication.md  membrane.md
examples/: README.md  density_driven_particles.py  microplastic_blood_vessel.py  multi_density_particles.py  plot_microplastic_blood.py  shape_dynamics.py  two_particle_types_microchannel.py
examples/01_poiseuille_lbm/: run.py
examples/02_bidisperse_segregation/: README.md  analyse.py  run.py
examples/03_segregation_diagnostics/: run.py
examples/03_segregation_diagnostics/diagnostics/: scalar_history.csv
examples/04_drug_delivery/: README.md  run.py  sweep.py
examples/05_tumor_growth/: README.md  analyse.py  run.py
python/: CMakeLists.txt  bindings.cpp
python/pysoftflow/: __init__.py  insertion.py  postprocess.py  preprocess.py  presets.py  setup.py  simulation.py  units.py  visualization.py
python/pysoftflow/analysis/: __init__.py  hdf5_export.py  jamming.py  mixing.py  patterns.py  rdf.py  snapshot.py
python/pysoftflow/drug_delivery/: __init__.py  absorbers.py  kinetics.py  metrics.py  runner.py
python/pysoftflow/ml/: __init__.py  active_learning.py  dataset.py  gnn.py  graph_extraction.py  inverse_design.py  surrogate.py
python/pysoftflow/tumor_growth/: __init__.py  daughters.py  division.py  embolization.py  runner.py
research/: README.md
research/01_microplastic_stenosis/: README.md  analyse.py  references.md  run.py
research/02_ctc_cluster_pulsatile/: README.md  analyse.py  references.md  run.py
research/03_deformability_dld/: README.md  analyse.py  fig_sweep_summary.txt  references.md  run.py  sweep.py  sweep_analyse.py
research/03_deformability_dld/paper/: README.md  cover_letter.tex  main.tex  make_paper_figures.py  references.bib
research/04_shear_activated_stenosis/: README.md  analyse.py  fig_sweep_summary.txt  graph_extraction_demo.py  make_paper_snapshots.py  ml_surrogate_demo.py  references.md  run.py  status.py  sweep.py  sweep_analyse.py
research/04_shear_activated_stenosis/paper/: README.md  main.tex  references.bib
research/04_shear_activated_stenosis/sweep_out/sev00_th1/: cell_result.json
research/04_shear_activated_stenosis/sweep_out/sev00_th2/: cell_result.json
research/04_shear_activated_stenosis/sweep_out/sev00_th3/: cell_result.json
research/04_shear_activated_stenosis/sweep_out/sev00_th4/: cell_result.json
research/04_shear_activated_stenosis/sweep_out/sev25_th1/: cell_result.json
research/04_shear_activated_stenosis/sweep_out/sev25_th2/: cell_result.json
research/04_shear_activated_stenosis/sweep_out/sev25_th3/: cell_result.json
research/04_shear_activated_stenosis/sweep_out/sev25_th4/: cell_result.json
research/04_shear_activated_stenosis/sweep_out/sev50_th1/: cell_result.json
research/04_shear_activated_stenosis/sweep_out/sev50_th2/: cell_result.json
research/04_shear_activated_stenosis/sweep_out/sev50_th3/: cell_result.json
research/05_constriction_clogging/: README.md  analyse.py  gen_gnn_data.py  gnn_loro_eval.py  graph_gnn_demo.py  make_figures.py  make_snapshot_figure.py  references.md  run.py  sweep.py
research/05_constriction_clogging/paper/: README.md  main.tex  references.bib
src/: CMakeLists.txt
src/analysis/: segregation_metrics.cpp  segregation_metrics.h
src/core/: aligned_memory.h  build_info.h.in  parameters.cpp  parameters.h  types.h
src/core/insertion/: dynamic_inserter.cpp  dynamic_inserter.h  image_mask_region.cpp  image_mask_region.h  inserter.cpp  inserter.h  lattice_inserter.cpp  lattice_inserter.h  region.cpp  region.h  rsa_inserter.cpp  rsa_inserter.h  size_distribution.cpp  size_distribution.h
src/coupling/: delta_function.h  immersed_boundary.cpp  immersed_boundary.h  viscosity_field.cpp  viscosity_field.h
src/engine/: simulation.cpp  simulation.h
src/geometry/: channel_builder.cpp  channel_builder.h  circle_obstacle.h  obstacle.h  polygon_obstacle.cpp  polygon_obstacle.h  rect_obstacle.h
src/io/: checkpoint.cpp  checkpoint.h  csv_writer.cpp  csv_writer.h  fluid_probe_writer.cpp  fluid_probe_writer.h  global_stats_writer.cpp  global_stats_writer.h  output_config.h  profiler.h  vtk_writer.cpp  vtk_writer.h
src/lbm/: advection_diffusion.cpp  advection_diffusion.h  bgk_collision.cpp  bgk_collision.h  bounce_back.cpp  bounce_back.h  free_surface.cpp  free_surface.h  interpolated_bounce_back.cpp  interpolated_bounce_back.h  lattice.h  lattice_field.cpp  lattice_field.h  lbm_solver.cpp  lbm_solver.h  moving_wall.cpp  moving_wall.h  mrt_collision.cpp  mrt_collision.h  regularized_bgk.cpp  regularized_bgk.h  shan_chen.cpp  shan_chen.h  zou_he_boundary.cpp  zou_he_boundary.h
src/membrane/: adhesion.cpp  adhesion.h  capsule.cpp  capsule.h  capsule_system.cpp  capsule_system.h  cell_list.h  lubrication.cpp  lubrication.h  node.h  repulsion.cpp  repulsion.h
src/ml/: simple_nn.cpp  simple_nn.h  surrogate_model.h  training_data.cpp  training_data.h
tests/: CMakeLists.txt
tests/python/: test_analysis_hdf5_export.py  test_analysis_jamming.py  test_analysis_mixing.py  test_analysis_patterns.py  test_analysis_rdf.py  test_analysis_snapshot.py  test_contact_friction_damping.py  test_drug_absorbers.py  test_drug_kinetics.py  test_drug_metrics.py  test_drug_runner.py  test_insertion.py  test_tumor_daughters.py  test_tumor_division.py  test_tumor_embolization.py  test_tumor_runner.py  test_units.py
tests/unit/: CMakeLists.txt  test_insertion_dynamic.cpp  test_insertion_image_mask.cpp  test_insertion_lattice.cpp  test_insertion_region.cpp  test_insertion_rsa.cpp  test_insertion_scaffold.cpp  test_insertion_size.cpp  test_lattice.cpp  test_run_manifest.cpp
tests/verification/: CMakeLists.txt  TODO.md  test_poiseuille.cpp  test_pure_diffusion.cpp  test_taylor_dispersion.cpp  test_taylor_green.cpp
(+5 files in other folders)
